Use regex instead of globs

--- a/views/options.html
+++ b/views/options.html
@@ -12,6 +12,7 @@ Matching file globs to suppress (1 per line):
 <div id="status"></div>
 <button id="save">Save</button>
 
+<script src="../js/storage.js"></script>
 <script src="../js/options.js"></script>
 </body>
 </html>
