rename globs to regexes now that we're using regexes

--- a/views/options.html
+++ b/views/options.html
@@ -5,7 +5,7 @@
 
 Matching file globs to suppress (1 per line):
 <br/>
-<textarea id="match_globs" rows="10" cols="50">
+<textarea id="match_regexes" rows="10" cols="50">
 
 </textarea>
 
